--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -31,6 +31,7 @@
       </div>
     </div>
 
+    <script src="../node_modules/notiflix/dist/notiflix-aio-3.2.6.min.js"></script>
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
